@@ -88,7 +88,6 @@ enum {
 	MENU_ARGUMENT_TYPE_ANGLE,
 	MENU_ARGUMENT_TYPE_DATA_OBJECT,
 	MENU_ARGUMENT_TYPE_DATA_PROPERTY
-//	MENU_ARGUMENT_TYPE_GIAC
 };
 
 enum {
