@@ -1,3 +1,8 @@
+2005-06-03 Niklas Knutsson  <nq@altern.org>
+
+	* Bitwise AND (&), OR (|), XOR
+	* Remove old giac stuff
+
 2005-05-15 Niklas Knutsson  <nq@altern.org>
 
 	* Max values seem to have been lost a long time ago -- add them again
